fix(docker): :bug: increase JVM Metaspace size to 256m and reduce Tomcat thread count to 5 for improved memory management